Adds another TrapRoom.